Footer alignment bugfix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1166,7 +1166,7 @@ footer li {
         width: 80px;
     }
 
-    .footer__credits {
+    .footer__credits>p {
         max-width: 70%;
     }
 }
